# moderncpp

./: .gitignore  README.md
design_pattern_exercises/adapter/: CMakeLists.txt
design_pattern_exercises/adapter/include/: LoggingFacility.h  StdOutLogger.h  StdOutLoggerAdapter.h
design_pattern_exercises/adapter/src/: CustomerRepository.cpp  StdOutLogger.cpp  StdOutLoggerAdapter.cpp  main.cpp
design_pattern_exercises/command_processor/: CMakeLists.txt
design_pattern_exercises/command_processor/include/: Command.h  DrawCircleCommand.h  DrawingProcessor.h
design_pattern_exercises/command_processor/src/: CommandProcessor.cpp  DrawCircleCommand.cpp  (+3 more)
design_pattern_exercises/composite_command/: CMakeLists.txt
design_pattern_exercises/factory/: CMakeLists.txt
design_pattern_exercises/observer/: CMakeLists.txt
design_pattern_exercises/singleton_dependency_injection/: CMakeLists.txt
design_pattern_exercises/strategy_with_chain_of_responsibility/: CMakeLists.txt
exercises/: assign_to_function_ret_val.cpp  class_with_initializer_list_constructor.cpp  concepts.cpp  custom_literals.cpp  define_exception_class.cpp  dip_circular_dependency.cpp  dip_dependency_inversion_advanced.cpp  dip_dependency_inversion_simple.cpp  enrich_types_with_type_traits.cpp  functor_binary_functor.cpp  functor_generator.cpp  functor_predicate.cpp  functor_unary_functor.cpp  generic_lambdas.cpp  high_order_functions.cpp  pointers_vs_references.cpp  smart_pointers.cpp  template_argument_fold.cpp
tdd_excercises/ArabicToRomanNumeralsConverter/: CMakeLists.txt
tdd_excercises/ArabicToRomanNumeralsConverter/include/: ArabicToRomanNumeralsConverter.h
tdd_excercises/ArabicToRomanNumeralsConverter/src/: ArabicToRomanNumeralsConverter.cpp  main.cpp
tdd_excercises/ArabicToRomanNumeralsConverter/tests/: ArabicToRomanNumeralsConverterTestCase.cpp  CMakeLists.txt
(+56 files in other folders)
